@@ -23,6 +23,7 @@ Changelog
  * `ChoiceBlock` now accepts a callable as the choices list (Mikalai Radchuk)
  * Redundant action buttons are now omitted from the root page in the explorer (Nick Smith)
  * Locked pages are now disabled from editing at the browser level (Edd Baldry)
+ * Added `in_site` method for filtering page querysets to pages within the specified site (Chris Rogers)
  * Fix: `AbstractForm` now respects custom `get_template` methods on the page model (Gagaro)
  * Fix: Use specific page model for the parent page in the explore index (Gagaro)
  * Fix: Remove responsive styles in embed when there is no ratio available (Gagaro)
